--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -722,13 +722,8 @@
                     <div class="card-content">
                       <h4>Pricing Review Required</h4>
                       <p>Material pricing exceeds CLP by significant margin. Review and adjust rates.</p>
-                      <div class="card-actions">
-                        <div class="progress-bar">
-                          <div class="progress-fill" style="width: 85%"></div>
-                        </div>
-                        <button class="action-btn">
-                          <i class="bi bi-arrow-right"></i>
-                        </button>
+                      <div class="progress-bar">
+                        <div class="progress-fill" style="width: 85%"></div>
                       </div>
                     </div>
                   </div>
@@ -744,13 +739,8 @@
                     <div class="card-content">
                       <h4>Documentation Gap</h4>
                       <p>Missing supporting documents for repair charges. Request additional documentation.</p>
-                      <div class="card-actions">
-                        <div class="progress-bar">
-                          <div class="progress-fill" style="width: 45%"></div>
-                        </div>
-                        <button class="action-btn">
-                          <i class="bi bi-arrow-right"></i>
-                        </button>
+                      <div class="progress-bar">
+                        <div class="progress-fill" style="width: 45%"></div>
                       </div>
                     </div>
                   </div>
@@ -766,13 +756,8 @@
                     <div class="card-content">
                       <h4>Timeline Review</h4>
                       <p>Minor discrepancies in delivery dates noted. Verify transportation timeline.</p>
-                      <div class="card-actions">
-                        <div class="progress-bar">
-                          <div class="progress-fill" style="width: 20%"></div>
-                        </div>
-                        <button class="action-btn">
-                          <i class="bi bi-arrow-right"></i>
-                        </button>
+                      <div class="progress-bar">
+                        <div class="progress-fill" style="width: 20%"></div>
                       </div>
                     </div>
                   </div>
@@ -1130,7 +1115,7 @@
                </li>
                <li class="nav-item" role="presentation" style="border:none;">
                  <button class="view-style-tab" id="breakdown-tab" data-bs-toggle="tab" data-bs-target="#breakdown" type="button" role="tab" aria-controls="breakdown" aria-selected="false">
-                   <i class="bi bi-table tab-icon"></i> <span class="d-none d-sm-inline">Detailed Breakdown</span>
+                   <i class="bi bi-table tab-icon"></i> <span class="d-none d-sm-inline">Module Level Breakdown</span>
                  </button>
                </li>
              </ul>
@@ -1139,11 +1124,6 @@
             <div class="review-details">
               <div class="details-header">
                 <h4>Detailed Breakdown</h4>
-                <div class="view-options">
-                  <button class="view-option active">All</button>
-                  <button class="view-option">This Month</button>
-                  <button class="view-option">Last Month</button>
-                </div>
               </div>
               <div class="details-table">
                 <table>
@@ -1218,26 +1198,6 @@
                   <h4>Recommendations</h4>
                   <span class="issue-count">3 Issues Found</span>
                 </div>
-                <div class="header-right">
-                  <div class="filter-group">
-                    <button class="filter-btn active" data-priority="all">
-                      <i class="bi bi-funnel"></i>
-                      All
-                    </button>
-                    <button class="filter-btn" data-priority="high">
-                      <i class="bi bi-exclamation-triangle"></i>
-                      High
-                    </button>
-                    <button class="filter-btn" data-priority="medium">
-                      <i class="bi bi-exclamation"></i>
-                      Medium
-                    </button>
-                    <button class="filter-btn" data-priority="low">
-                      <i class="bi bi-info-circle"></i>
-                      Low
-                    </button>
-                  </div>
-                </div>
               </div>
               <div class="recommendations-list">
                 <div class="rec-card high">
@@ -1251,13 +1211,8 @@
                   <div class="card-content">
                     <h4>Pricing Review Required</h4>
                     <p>Material pricing exceeds CLP by significant margin. Review and adjust rates.</p>
-                    <div class="card-actions">
-                      <div class="progress-bar">
-                        <div class="progress-fill" style="width: 85%"></div>
-                      </div>
-                      <button class="action-btn">
-                        <i class="bi bi-arrow-right"></i>
-                      </button>
+                    <div class="progress-bar">
+                      <div class="progress-fill" style="width: 85%"></div>
                     </div>
                   </div>
                 </div>
@@ -1272,13 +1227,8 @@
                   <div class="card-content">
                     <h4>Documentation Gap</h4>
                     <p>Missing supporting documents for repair charges. Request additional documentation.</p>
-                    <div class="card-actions">
-                      <div class="progress-bar">
-                        <div class="progress-fill" style="width: 45%"></div>
-                      </div>
-                      <button class="action-btn">
-                        <i class="bi bi-arrow-right"></i>
-                      </button>
+                    <div class="progress-bar">
+                      <div class="progress-fill" style="width: 45%"></div>
                     </div>
                   </div>
                 </div>
@@ -1293,13 +1243,8 @@
                   <div class="card-content">
                     <h4>Timeline Review</h4>
                     <p>Minor discrepancies in delivery dates noted. Verify transportation timeline.</p>
-                    <div class="card-actions">
-                      <div class="progress-bar">
-                        <div class="progress-fill" style="width: 20%"></div>
-                      </div>
-                      <button class="action-btn">
-                        <i class="bi bi-arrow-right"></i>
-                      </button>
+                    <div class="progress-bar">
+                      <div class="progress-fill" style="width: 20%"></div>
                     </div>
                   </div>
                 </div>
