--- a/partLevel.html
+++ b/partLevel.html
@@ -15,7 +15,6 @@
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/css/main.css">
-  <link rel="stylesheet" href="src/css/invoice.css">
   <link rel="stylesheet" href="src/css/partLevel.css">
 </head>
 
@@ -157,17 +156,20 @@
       </header>
       <!-- Custom Dashboard Header -->
       <div class="plv-header">
-        <div class="plv-header-title">
-          <i class="bi bi-bar-chart-line"></i>
-          Invoice Summary & Recommendation
+        <div class="plv-header-content">
+          <div class="plv-header-title">
+            <i class="bi bi-bar-chart-line"></i>
+            Invoice Summary & Recommendation
+          </div>
+          <div class="plv-header-desc">
+            Monitor invoice status, review recommendations, and take action on flagged items.
+          </div>
         </div>
-        <div class="plv-header-desc">
-          Monitor invoice status, review recommendations, and take action on flagged items.
-        </div>
+        
       </div>
       <section class="invoice-dashboard-section">
         <!-- Stats Overview -->
-        <div class="stats-grid mb-3">
+        <div class="stats-grid">
           <div class="stat-card">
             <div class="stat-icon pending">
               <i class="bi bi-clock"></i>
@@ -207,26 +209,18 @@
         </div>
 
         <!-- Info Banner -->
-        <div class="info-banner mb-3">
+        <div class="info-banner">
           <i class="bi bi-info-circle-fill me-2"></i>
           <span>We're reviewing your invoices. Some may require additional review before submission.</span>
           <button class="close-banner" aria-label="Close">&times;</button>
         </div>
 
         <!-- Tabs/Filters -->
-        <div class="dashboard-tabs mb-3">
+        <div class="dashboard-tabs">
           <button class="tab active">All Invoices <span class="tab-badge">14</span></button>
           <button class="tab">Pending <span class="tab-badge">3</span></button>
           <button class="tab">Approved <span class="tab-badge">8</span></button>
           <button class="tab">Flagged <span class="tab-badge">3</span></button>
-          <div class="ms-auto d-flex gap-2">
-            <button class="btn btn-outline-primary" id="exportBtn">
-              <i class="bi bi-download me-1"></i> Export
-            </button>
-            <button class="btn btn-primary" id="addInvoiceBtn">
-              <i class="bi bi-plus-lg me-1"></i> Add New
-            </button>
-          </div>
         </div>
 
         <!-- Table Card -->
@@ -252,12 +246,7 @@
                 <!-- Sample row for reference -->
                 <tr>
                   <td><input type="checkbox" class="form-check-input"></td>
-                  <td>
-                    <div class="d-flex align-items-center gap-2">
-                      <div class="avatar avatar-sm">P1</div>
-                      <span>Part-001</span>
-                    </div>
-                  </td>
+                  <td>Part-001</td>
                   <td>Module-A</td>
                   <td>Class-1</td>
                   <td>Standard Component</td>
