--- a/partLevel.html
+++ b/partLevel.html
@@ -169,11 +169,16 @@
       </div>
       <section class="invoice-dashboard-section">
         <!-- Tabs/Filters -->
-        <div class="dashboard-tabs">
-          <button class="tab active">All Invoices <span class="tab-badge">14</span></button>
-          <button class="tab">Pending <span class="tab-badge">3</span></button>
-          <button class="tab">Approved <span class="tab-badge">8</span></button>
-          <button class="tab">Flagged <span class="tab-badge">3</span></button>
+        <div class="dashboard-tabs-row d-flex align-items-center justify-content-between flex-wrap mb-2">
+          <div class="dashboard-tabs d-flex align-items-center gap-2 flex-wrap mb-0">
+            <button class="tab active">All Invoices <span class="tab-badge">14</span></button>
+            <button class="tab">Pending <span class="tab-badge">3</span></button>
+            <button class="tab">Approved <span class="tab-badge">8</span></button>
+            <button class="tab">Flagged <span class="tab-badge">3</span></button>
+          </div>
+          <div class="dashboard-search ms-auto">
+            <!-- Search input will be appended here by JS -->
+          </div>
         </div>
 
         <!-- Table Card -->
@@ -183,70 +188,80 @@
               <thead>
                 <tr>
                   <th width="40"><input type="checkbox" id="selectAllInvoices" class="form-check-input"></th>
-                  <th>Part</th>
-                  <th>Module</th>
-                  <th>Class</th>
-                  <th>Description</th>
-                  <th>Qty</th>
-                  <th>Unit Value</th>
-                  <th>Total</th>
-                  <th>Status</th>
-                  <th>Insights</th>
-                  <th width="60"></th>
+                  <th data-column="part" data-sortable="true">Part</th>
+                  <th data-column="module" data-sortable="true">Module</th>
+                  <th data-column="class" data-sortable="true">Class</th>
+                  <th data-column="description" data-sortable="true">Description</th>
+                  <th data-column="qty" data-sortable="true">Qty</th>
+                  <th data-column="unitValue" data-sortable="true">Unit Value</th>
+                  <th data-column="total" data-sortable="true">Total</th>
+                  <th data-column="status" data-sortable="true">Status</th>
+                  <th data-column="insights" data-sortable="false">Insights</th>
+                  <th data-column="group" data-sortable="true">Group</th>
                 </tr>
               </thead>
               <tbody id="invoiceDashboardBody">
                 <!-- Sample row for reference -->
                 <tr>
-                  <td><input type="checkbox" class="form-check-input"></td>
-                  <td>Part-001</td>
-                  <td>Module-A</td>
-                  <td>Class-1</td>
-                  <td>Standard Component</td>
-                  <td>5</td>
-                  <td>$100.00</td>
-                  <td>$500.00</td>
-                  <td><span class="badge badge-pending">Pending</span></td>
-                  <td>
+                  <td><input type="checkbox" class="form-check-input invoice-checkbox" value="1"></td>
+                  <td data-column="part">ABC123</td>
+                  <td data-column="module">Engine</td>
+                  <td data-column="class">A</td>
+                  <td data-column="description">Engine Block Assembly</td>
+                  <td data-column="qty">2</td>
+                  <td data-column="unitValue">$1,500.00</td>
+                  <td data-column="total">$3,000.00</td>
+                  <td data-column="status"><span class="badge badge-pending">Pending</span></td>
+                  <td data-column="insights">
                     <div class="progress-bar">
                       <div class="progress-bar-inner" style="width: 75%"></div>
                     </div>
                   </td>
-                  <td>
-                    <div class="actions">
-                      <button class="btn btn-link btn-sm p-0" data-bs-toggle="dropdown">
-                        <i class="bi bi-three-dots-vertical"></i>
-                      </button>
-                      <div class="actions-menu">
-                        <a href="#" class="dropdown-item"><i class="bi bi-eye me-2"></i>View</a>
-                        <a href="#" class="dropdown-item"><i class="bi bi-pencil me-2"></i>Edit</a>
-                        <a href="#" class="dropdown-item text-danger"><i class="bi bi-trash me-2"></i>Delete</a>
-                      </div>
-                    </div>
-                  </td>
+                  <td data-column="group">-</td>
                 </tr>
+                <!-- Add more sample rows here -->
               </tbody>
             </table>
           </div>
         </div>
 
         <!-- Pagination -->
-        <div class="d-flex justify-content-between align-items-center mt-3">
-          <div class="text-muted small">
-            Showing 1 to 10 of 14 entries
+        <div class="dashboard-footer">
+          <div class="footer-left">
+            <div class="items-per-page">
+              <label for="itemsPerPage">Show</label>
+              <select id="itemsPerPage" class="form-select form-select-sm">
+                <option value="10">10</option>
+                <option value="25">25</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+              </select>
+              <span>entries</span>
+            </div>
+            <div class="summary-info">
+              Showing <span id="startEntry">1</span> to <span id="endEntry">10</span> of <span id="totalEntries">14</span> entries
+            </div>
           </div>
-          <nav aria-label="Page navigation">
-            <ul class="pagination pagination-sm mb-0">
-              <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1">Previous</a>
-              </li>
-              <li class="page-item active"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-              </li>
-            </ul>
-          </nav>
+          <div class="footer-right">
+            <div class="pagination-wrapper">
+              <button class="btn btn-sm btn-outline-secondary" id="firstPage" title="First Page">
+                <i class="bi bi-chevron-double-left"></i>
+              </button>
+              <button class="btn btn-sm btn-outline-secondary" id="prevPage" title="Previous Page">
+                <i class="bi bi-chevron-left"></i>
+              </button>
+              <div class="page-numbers">
+                <button class="btn btn-sm btn-primary">1</button>
+                <button class="btn btn-sm btn-outline-secondary">2</button>
+              </div>
+              <button class="btn btn-sm btn-outline-secondary" id="nextPage" title="Next Page">
+                <i class="bi bi-chevron-right"></i>
+              </button>
+              <button class="btn btn-sm btn-outline-secondary" id="lastPage" title="Last Page">
+                <i class="bi bi-chevron-double-right"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
