--- a/partLevel.html
+++ b/partLevel.html
@@ -5,13 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMBA Dashboard - Invoice Creation</title>
-  <!-- jQuery -->
+  <!-- jQuery (must be first) -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+  <!-- DataTables CSS -->
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.bootstrap5.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/css/main.css">
@@ -184,91 +188,51 @@
         <!-- Table Card -->
         <div class="dashboard-card">
           <div class="table-responsive">
-            <table class="dashboard-table">
+            <table id="invoiceTable" class="dashboard-table table table-striped table-bordered">
               <thead>
                 <tr>
                   <th width="40"><input type="checkbox" id="selectAllInvoices" class="form-check-input"></th>
-                  <th data-column="part" data-sortable="true">Part</th>
-                  <th data-column="module" data-sortable="true">Module</th>
-                  <th data-column="class" data-sortable="true">Class</th>
-                  <th data-column="description" data-sortable="true">Description</th>
-                  <th data-column="qty" data-sortable="true">Qty</th>
-                  <th data-column="unitValue" data-sortable="true">Unit Value</th>
-                  <th data-column="total" data-sortable="true">Total</th>
-                  <th data-column="status" data-sortable="true">Status</th>
-                  <th data-column="insights" data-sortable="false">Insights</th>
-                  <th data-column="group" data-sortable="true">Group</th>
+                  <th>Part</th>
+                  <th>Module</th>
+                  <th>Class</th>
+                  <th>Description</th>
+                  <th>Qty</th>
+                  <th>Unit Value</th>
+                  <th>Total</th>
+                  <th>Status</th>
+                  <th>Insights</th>
+                  <th>Group</th>
                 </tr>
               </thead>
-              <tbody id="invoiceDashboardBody">
-                <!-- Sample row for reference -->
-                <tr>
-                  <td><input type="checkbox" class="form-check-input invoice-checkbox" value="1"></td>
-                  <td data-column="part">ABC123</td>
-                  <td data-column="module">Engine</td>
-                  <td data-column="class">A</td>
-                  <td data-column="description">Engine Block Assembly</td>
-                  <td data-column="qty">2</td>
-                  <td data-column="unitValue">$1,500.00</td>
-                  <td data-column="total">$3,000.00</td>
-                  <td data-column="status"><span class="badge badge-pending">Pending</span></td>
-                  <td data-column="insights">
-                    <div class="progress-bar">
-                      <div class="progress-bar-inner" style="width: 75%"></div>
-                    </div>
-                  </td>
-                  <td data-column="group">-</td>
-                </tr>
-                <!-- Add more sample rows here -->
+              <tbody>
+                <!-- Data will be populated by DataTables -->
               </tbody>
             </table>
-          </div>
-        </div>
-
-        <!-- Pagination -->
-        <div class="dashboard-footer">
-          <div class="footer-left">
-            <div class="items-per-page">
-              <label for="itemsPerPage">Show</label>
-              <select id="itemsPerPage" class="form-select form-select-sm">
-                <option value="10">10</option>
-                <option value="25">25</option>
-                <option value="50">50</option>
-                <option value="100">100</option>
-              </select>
-              <span>entries</span>
-            </div>
-            <div class="summary-info">
-              Showing <span id="startEntry">1</span> to <span id="endEntry">10</span> of <span id="totalEntries">14</span> entries
-            </div>
-          </div>
-          <div class="footer-right">
-            <div class="pagination-wrapper">
-              <button class="btn btn-sm btn-outline-secondary" id="firstPage" title="First Page">
-                <i class="bi bi-chevron-double-left"></i>
-              </button>
-              <button class="btn btn-sm btn-outline-secondary" id="prevPage" title="Previous Page">
-                <i class="bi bi-chevron-left"></i>
-              </button>
-              <div class="page-numbers">
-                <button class="btn btn-sm btn-primary">1</button>
-                <button class="btn btn-sm btn-outline-secondary">2</button>
-              </div>
-              <button class="btn btn-sm btn-outline-secondary" id="nextPage" title="Next Page">
-                <i class="bi bi-chevron-right"></i>
-              </button>
-              <button class="btn btn-sm btn-outline-secondary" id="lastPage" title="Last Page">
-                <i class="bi bi-chevron-double-right"></i>
-              </button>
-            </div>
           </div>
         </div>
       </section>
     </main>
   </div>
 
+  <!-- Scripts -->
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- DataTables Core -->
+  <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+  
+  <!-- DataTables Bootstrap 5 Integration -->
+  <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+  
+  <!-- DataTables Responsive -->
+  <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+  <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+  
+  <!-- DataTables Buttons -->
+  <script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.bootstrap5.min.js"></script>
+  
+  <!-- Custom JS -->
   <script src="src/js/script.js"></script>
   <script src="src/js/header.js"></script>
   <script src="src/js/partLevel.js"></script>
