style(contractSummary): enhance layout and styling for contract summary display
- Update CSS styles for the contract summary section to improve visual appeal and responsiveness.
- Adjust padding, gap, and border properties for better alignment and interaction.
- Refine contract pill styles for consistency and improved user experience.

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                     <span>Customer contract status breakdown</span>
                   </div>
                 </div>
-                <div id="contractSummary" class="contract-summary-compact" style="background: #f8fafc; border-radius: 0.75rem; padding: 0.4rem 0.7rem; font-size: 0.91em; display: flex; flex-wrap: wrap; gap: 0.5rem; align-items: center; justify-content: flex-start;">
+                <div id="contractSummary" class="contract-summary-compact" style="background: #f8fafc; border-radius: 0.75rem; padding: 0.5rem; font-size: 0.91em; display: flex; flex-wrap: wrap; gap: 0.4rem; align-items: center; justify-content: flex-start; border: 1px solid #e2e8f0;">
                   <!-- Summary content will be injected by JS -->
                 </div>
               </div>
